# ai-first-pipeline

./: .dockerignore  .env.template  .gitignore  .gitleaksignore  BUG1.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  NEW-FRONTEND-PLAN.md  README.md  TEST-PLAN.md  Vagrantfile  Vagrantfile.rsync  main.py  pipeline-skills.yaml  pyproject.toml  security-skill-comparison.md  security-skill-landscape-analysis.md  test_orchestrator.py
bugs/: STRAT-CREATE-ISSUES.md  eder-strat-skills-script.txt  eder-strat-skills-tracing.md  flask-single-threaded-sse-blocking.md  rfe-speedrun-noop.md
deploy/: DEPLOYMENT_SUMMARY.md  FILELIST.md  FIXES_AND_GOTCHAS.md  GITHUB_DEPLOYMENT.md  JIRA_DEPLOYMENT.md  README.md  TEST-RESULTS.md
docs/: CONVENTIONS.md  README.md  agent-parallelism.md  agent-runner.md  architecture-data-flow.mmd  architecture-infrastructure.mmd  architecture-jobs-runners.mmd  architecture-overview.mmd  architecture.mmd  claude-mcp-behavior.md  claude-sdk-mlflow-integration.md  cli-runner.md  mlflow-basics.md  mlflow-claude.md  pipeline-execution-flow.mmd
lib/: agent_runner.py  cli.py  k8s_orchestrator.py  paths.py  phases.py  prompts.py  repo_mapping.py  report_data.py  rfe_data.py  schemas.py  skill_config.py  stats.py  validation.py  webapp.py
markov.workflows/: batch-rfe-pipeline.yaml  rfe-pipeline-with-gates.yaml
reports/: AICP-assessment.md
scripts/: attach_to_jira.py  clean.sh  fetch_bugs.py  migrate_to_workspace.py  run_skill.sh  run_skill_sdk.sh  stream-claude.py
security-reviews/: RHAISTRAT-1-security-review.md
skills-registry/: registry.yaml
(+104 files in other folders)
